--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,5 +17,6 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ARTASTRADALA_353F0 }}
           channelId: live
           projectId: artastradala-353f0
+          entryPoint: landing-page/firebase.json
       - run: npm run build
 
