--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,7 +11,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: npm run build
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Debug File Structure
+        run: ls -R
+
+      - name: Install dependencies
+        run: npm install
+
+        working-directory: landing-page
+      - name: Build project
+        run: npm run build
+        working-directory: landing-page
+        
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
