--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,8 +15,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Debug File Structure
-        run: ls -R
-
+        run: pwd && ls -la
+      
       - name: Install dependencies
         run: npm install
 
@@ -24,7 +24,7 @@ jobs:
       - name: Build project
         run: npm run build
         working-directory: landing-page
-        
+
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
