--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,11 +19,11 @@ jobs:
       
       - name: Install dependencies
         run: npm install
+        working-directory:
 
-        working-directory: landing-page
       - name: Build project
         run: npm run build
-        working-directory: landing-page
+        working-directory:
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
