--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -21,8 +21,9 @@ jobs:
         run: npm install
         working-directory:
 
-      - name: Build project
-        run: npm run build
+      - run: | 
+          cd landing-page 
+          npm run build
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
