Change that again.

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -21,9 +21,9 @@ jobs:
         run: npm install
         working-directory:
 
-      - run: | 
-          cd landing-page 
-          npm run build
+      - name: Build project
+        run: npm run build
+        working-directory: ./landing-page
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
