--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,7 +17,7 @@ jobs:
         run: pwd && ls -la
       - name: Install dependencies
         run: npm install
-        working-directory:
+        working-directory: ./landing-page
       - name: Build project
         run: npm run build
         working-directory: ./landing-page
