--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,10 +17,10 @@ jobs:
         run: pwd && ls -la
       - name: Install dependencies
         run: npm install
-        working-directory: ./landing-page
+        working-directory: ./LandingPage/landing-page
       - name: Build project
         run: npm run build
-        working-directory: ./landing-page
+        working-directory: ./LandingPage/landing-page
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
