--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,12 +15,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Debug File Structure
         run: pwd && ls -la
-      - name: Install dependencies
-        run: npm install
-        working-directory: ./LandingPage/landing-page
       - name: Build project
         run: npm run build
-        working-directory: ./LandingPage/landing-page
+        working-directory: ./landing-page
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
