--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Install Angular CLI
         run: npm install -g @angular/cli
         working-directory: ./landing-page
+      - name: Install Angular build dependencies
+        run: npm install -g @angular-devkit/build-angular
+        working-directory: ./landing-page
       - name: Build project
         run: npm run build
         working-directory: ./landing-page
