--- a/landing-page/angular.json
+++ b/landing-page/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/landing-page/browser",
+            "outputPath": "dist/landing-page",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
